<resources>
    <string name="app_name">Pop Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_spinner">Sort by</string>
    <string name="action_sort_by_top_rated">Sort by top rated</string>
    <string name="action_sort_by_most_popular">Sort by most popular</string>
    <string name="release_date">Release date:</string>
    <string name="rating">Rating:</string>
    <string name="runtime">Runtime:</string>
    <string name="overview">Overview:</string>
    <string name="error_message">An error has occurred. Please try again later.</string>
    <string name="popularity">Popularity:</string>
    <string name="not_available">N/A</string>
    <string name="rating_text">%s / 10</string>
    <string name="original_language">Original Language:</string>
    <string name="genre">Genre:</string>
    <string name="genres">Genres:</string>
    <string name="original_title">Original Title:</string>
    <string name="trailers">Trailers:</string>
    <string name="mark_favorite_label">Mark as favorite</string>
    <string name="favorite_label">Remove as favorite</string>
    <string name="reviews">Reviews:</string>
    <string name="youTubeImageUrl">http://img.youtube.com/vi/%s/0.jpg</string>

    <string-array name="spinner_array">
        <item>Sort by most popular</item>
        <item>Sort by top rated</item>
        <item>Show favorites</item>
    </string-array>
</resources>
